syntax = "proto3";
package word;

service WordService {
    rpc GetWord(WordRequest) returns (WordResponse);
}

message WordRequest {
    string id = 1;
}

message WordResponse {
    string id = 1;
    string simplified_chinese_characters = 2;
    string pinyin = 3;
    string meaning = 4;
}
